프론트 수정.

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -33,8 +33,10 @@
     }
 
     .profile-img {
+        object-fit: cover;
         width: 25px;
         height: 25px;
+        border-radius: 50%; /* 원형 모양으로 이미지를 표시하기 위해 */
     }
 </style>
 
