--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -150,11 +150,11 @@
                         </div>
                         <!--                            버튼-->
                         <div class="col text-center mb-5">
-                            <button type="button" value="취소" id="cancelBtn" class="btn btn-secondary"
+                            <button type="button" value="취소" id="cancelBtn" class="btn btn-primary2 btn-md"
                                     onClick="location.href='/review'">취소
                             </button>
 
-                            <input type="submit" value="가입" id="joinBtn" class="btn btn-primary btn-md">
+                            <input type="submit" value="가입" id="joinBtn" class="btn-join btn btn-primary btn-md">
                         </div>
 
                     </div>
