--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -5,14 +5,16 @@
 <!-- 코드언어 표시 == 웹 표준지침 준수 -->
 <head>
     <!-- Bootstrap icons-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
+          type="text/css"/>
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
     <!-- jquery-->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/style.css?after" rel="stylesheet" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="assets/css/style.css?after" rel="stylesheet"/>
     <link href="assets/css/commonstyle.css?after" rel="stylesheet"/>
     <title>프로필 수정</title>
 
@@ -22,31 +24,88 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 50px;
     }
+
     .profile-info {
         display: flex;
         align-items: center;
-        margin-bottom: 20px;
-        padding-left: 3em;
-        padding-right: 3em;
-        padding-top: 2em;
-        padding-bottom: 2em;
+        margin-bottom: 2em;
+
     }
+
     .profile-info img {
         width: 100px;
         height: 100px;
         border-radius: 50%;
-        margin-right: 20px;
+        margin: auto;
     }
 
     .editprofilediv {
         padding-left: 12px;
     }
 
-    .form-group{
-        width: auto;
+    .form-group {
+        width: 400px;
     }
+
+    .profile-pic {
+        display: grid;
+        text-align: center;
+        margin-right: 3em;
+    }
+
+    .profile-pic img {
+        object-fit: cover;
+        width: 100px; /* 미리보기 이미지의 너비 */
+        height: 100px; /* 미리보기 이미지의 높이 */
+        border-radius: 50%; /* 원형 모양으로 이미지를 표시하기 위해 */
+    }
+
+    /*    업로드 버튼*/
+    .btn-upload {
+        width: 150px;
+        height: 30px;
+        background: #fff;
+        border: 1px solid rgb(77, 77, 77);
+        border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            background: rgb(77, 77, 77);
+            color: #fff;
+        }
+    }
+
+    #uploadFile {
+        display: none;
+    }
+
+    .btn-editProfile {
+        text-align: center;
+    }
+
+    .btn-primary {
+        width: 100px;
+    }
+
+    .about-list{
+       display: flex;
+        justify-content: flex-start;
+    }
+
+    .list_info{
+        margin-left: auto;}
+
+
+.loginUser-list{
+    padding-top: 12px;
+}
+
+
 </style>
 <body>
 <!--사이드바-->
@@ -63,42 +122,78 @@
         </div>
 
         <div>
-        <div class="container editprofilediv">
-            <div class="profile-info">
-                <img th:if="${loginUser.profileImg == null}" src="/assets/img/profile.jpg" alt="프로필 이미지">
-                <img th:unless="${loginUser.profileImg == null}" th:src="|@{/api/image/profile/}${loginUser.profileImg}|" alt="프로필 이미지">
-                <div>
-                    <p>아이디: <span th:text="${loginUser.id}"></span></p>
-                    <p>메일주소: <span th:text="${loginUser.email}"></span></p>
+            <div class="container editprofilediv">
+                <!-- 프로필 변경타이틀부분 -->
+                <div id="header" class="mb-3">
+                    <h1 class="text-center">
+                        프로필 변경
+                    </h1>
+                    <p class="text-center">프로필 변경 페이지입니다.</p>
                 </div>
 
-                <input id="uploadFile" type="file" accept="image/*" onchange="setProfileImage()"/>
+                <div class="profile-info">
+                    <div class="profile-pic">
+                        <div class="mb-2">
+                        <img th:if="${loginUser.profileImg == null}" src="/assets/img/profile.jpg" alt="프로필 이미지">
+                        <img th:unless="${loginUser.profileImg == null}"
+                             th:src="|@{/api/image/profile/}${loginUser.profileImg}|" alt="프로필 이미지">
+                        </div>
+
+                        <label for="uploadFile">
+                            <div class="btn-upload">사진 업로드</div>
+                        </label>
+                        <input id="uploadFile" type="file" accept="image/*" onchange="setProfileImage()"/>
+
+                    </div>
+
+                    <div class="loginUser-list">
+                        <h5>아이디: </h5>
+                        <p><span th:text="${loginUser.id}"></span></p>
+                        <h5>메일주소: </h5>
+                        <p><span th:text="${loginUser.email}"></span></p>
+                    </div>
+
+
+                </div>
+
+                <form id="editForm" action="/editProfile" method="post">
+                    <div class="form-group userInput ">
+                        <div class="mb-5">
+                            <div class="mb-2">
+                                <h4 class="list">닉네임</h4>
+                                <input type="text" id="name" class="form-control form-control-sm" maxlength="20"
+                                       th:value="${loginUser.name}"/>
+                            </div>
+                            <div class=" mb-2">
+                                <div class="about-list">
+                                    <div>
+                                        <h4 class="list">내 소개</h4>
+                                    </div>
+                                    <div class="list_info">※20자까지입력가능
+                                    </div>
+                                </div>
+                                <textarea id="about" rows="4" class="form-control form-control-sm" maxlength="20"
+                                          th:text="${loginUser.about} == null ? '아직 내용이 없습니다.' : ${loginUser.about}"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="btn-editProfile">
+                            <button class="text-center btn btn-primary2" id="saveCancel">취소</button>
+                            <button class="text-center btn btn-primary btn-md" id="saveProfileBtn" type="button"
+                                    onclick="saveProfile()">저장
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
 
-            <form id="editForm" action="/editProfile" method="post" >
-            <div class="form-group userInput mb-5">
-
-                    <h4 class="list">닉네임</h4>
-                    <input type="text" id="name"  class="form-control form-control-sm" maxlength="20"  th:value="${loginUser.name}"/>
-
-                    <h4 class="list">내 소개</h4>
-                    <textarea id="about" rows="4"  class="form-control form-control-sm" maxlength="20"   th:text="${loginUser.about} == null ? '아직 내용이 없습니다.' : ${loginUser.about}"></textarea>
-
-
-                <button class="btn btn-primary2" id="saveProfileBtn" type="button"
-                        onclick="saveProfile()">저장</button>
-                <button class="btn btn-primary2" id="saveCancel">취소</button>
-            </div>
-            </form>
         </div>
-
     </div>
-</div>
 </div>
 
 <script th:inline="javascript">
 
-    function setProfileImage(){
+    function setProfileImage() {
         let fileInput = $("#uploadFile")[0];
         let profileImg = fileInput.files[0];
 
@@ -109,7 +204,7 @@
         reader.readAsDataURL(profileImg);
     }
 
-    function saveProfile(){
+    function saveProfile() {
         console.log("저장 버튼이 클릭되었습니다.");
         let formData = new FormData();
 
@@ -122,7 +217,7 @@
         formData.append("userId", id);
         formData.append("name", name);
         formData.append("about", about);
-        if(profileImg != null){
+        if (profileImg != null) {
             formData.append("newProfileImg", profileImg);
         }
 
