--- a/src/main/resources/templates/mypage/changePw.html
+++ b/src/main/resources/templates/mypage/changePw.html
@@ -27,15 +27,18 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 50px;
     }
 
     .form-group {
-        width: auto;
+        width: 50%;
     }
 
     .changePwdiv {
         padding-left: 12px;
+    }
+
+    .btn_align {
+        text-align: center;
     }
 </style>
 <body>
@@ -43,7 +46,8 @@
 <div class="d-flex flex-nowrap">
     <th:block th:replace="~{fragments/sidebar}"></th:block>
 
-    <div class="w3-content w3-container w3-margin-top container position-relative pb-5" style="margin: 0 auto;">
+    <div class="w3-content w3-container w3-margin-top container position-relative pb-5 justify-content-center"
+         style="margin: 0 auto;">
         <!--허전해서 이미지-->
         <div class="w3-content w3-container container position-relative pb-5 headerImg"
              style="background-image: url('/assets/img/mainimg/daejeon2.jpg');
@@ -56,7 +60,7 @@
             <div class="form-group userInput mb-5">
 
                 <!-- 비밀번호 변경타이틀부분 -->
-                <div id="header">
+                <div id="header" class="mb-5">
                     <h1 class="text-center">
                         비밀번호 변경
                     </h1>
@@ -73,12 +77,15 @@
                         <div class="userInput mb-5">
                             <h4 class="list">현재 비밀번호</h4>
 
-                            <div class="input-group">
+                            <div class="input-group mb-5">
                                 <!-- 현재 비밀번호 -->
                                 <input type="password" name="currentPw" id="currentPw"
                                        class="form-control form-control-sm" maxlength="20"
                                        placeholder="현재 비밀번호를 입력하세요."/>
                             </div>
+                        </div>
+
+                        <div class="userInput mb-5">
 
                             <h4 class="list">새 비밀번호</h4>
 
@@ -88,6 +95,9 @@
                                        maxlength="20" placeholder="새 비밀번호를 입력하세요."/>
                             </div>
 
+                        </div>
+                        <div class="userInput mb-5">
+
                             <h4 class="list">새 비밀번호 확인</h4>
                             <div class="input-group">
                                 <!-- 새 비밀번호 확인 -->
@@ -95,17 +105,23 @@
                                        class="form-control form-control-sm" maxlength="20"
                                        placeholder="새 비밀번호 한 번 더 입력해주세요."/>
                             </div>
+                        </div>
 
+                        <div class="btn_align">
 
-                            <button id="changePassword" class="btn btn-primary btn-md" onclick="changePassword()"> 변경하기
+                            <button class="col text-center mb-5 btn btn-primary2" id="saveCancel" onclick="cancel()">취소
                             </button>
-                            <button class="btn btn-primary2" id="saveCancel" onclick="cancel()">취소</button>
+
+                            <button id="changePassword" class="col text-center mb-5 btn btn-primary btn-md"
+                                    onclick="changePassword()"> 변경하기
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </div>
 <script>
 
@@ -114,7 +130,7 @@
         window.location.href = '/review';
     }
 
-    let changePassword = function (){
+    let changePassword = function () {
         let reg_pw = /^(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/;
         let currentPassword = document.getElementsByName("currentPw")[0].value;
         let newPassword = document.getElementsByName("newPw")[0].value;
@@ -130,8 +146,7 @@
             console.log(event.target);
             document.getElementsByName('newPw')[0].focus();
             return false;
-        }
-        else if (currentPassword === newPassword){
+        } else if (currentPassword === newPassword) {
             alert("현재 비밀번호와 같습니다.");
             return false;
         }
